<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thunsaker.brevos.ui.EditLinkActivity"
    tools:showIn="@layout/activity_edit_link">

    <TextView
        android:id="@+id/textViewCreateUrlLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginBottom="@dimen/material_padding"
        android:text="@string/url_label" />

    <EditText
        android:id="@+id/editTextCreateUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:ellipsize="end"
        android:hint="@string/shorten_hint_text"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/textViewCreateSpinnerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginTop="@dimen/material_padding_double"
        android:layout_marginBottom="@dimen/material_padding"
        android:text="@string/domain_select" />

    <Spinner
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spinnerCreateDomain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar" />

    <CheckBox
        android:id="@+id/checkboxCreatePrivate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_padding_double"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/private_link"/>

</LinearLayout>
